--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,8 +46,7 @@
                         </li>
                     </ul>
                 <div class="link-btn">
-                    <a class="btn-style-one" asp-area="" asp-controller="RegistrationLogin" asp-action="ER_Registration">ER Registration</a>
-                    @*  <a href="#" class="btn-style-one">Appoinment</a> *@
+                        <a class="btn-style-one" asp-area="" asp-controller="ErRegistration" asp-action="ErRegistration">ER Registration</a>
                 </div>
             </div>
         </div>
