Updated code - ErQueue -Controller - icon layout updat -  Dependency in project.cs

--- a/Views/ErRegistration/ErRegistration.cshtml
+++ b/Views/ErRegistration/ErRegistration.cshtml
@@ -64,7 +64,7 @@
                                 <span>Registration</span>
                             </h3>
                         </div>
-                    <form method="post" id="erReg" name="contact_form" class="default-form contact-form">
+                    <form method="post" id="erReg" name="contact_form" class="default-form contact-form" onsubmit="sendForm(event)">
                         <div class="row">
                             <div class="col-md-6 col-sm-12 col-xs-12">
                                 <div class="form-group">
