--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,7 +26,24 @@
 
                 </figure>
             </div>
-            <div class="right-side">
+                <div class="right-side">
+                    <ul class="contact-info">
+                        <li class="item">
+                            <strong>Email</strong>
+                            <br>
+                            <span>info@medic.com</span>
+                        </li>
+                        <li class="item">
+                            <strong>Call Now</strong>
+                            <br>
+                            <span>+(27) - 112</span>
+                        </li>
+                    </ul>
+                    <div class="link-btn">
+                        <a class="btn-style-one" asp-area="" asp-controller="ErRegistration" asp-action="ErRegistration">ER Registration</a>
+                    </div>
+                </div>
+         @*    <div class="right-side">
                     <ul class="contact-info">
                         <li class="item">
                             <div class="icon-box">
@@ -48,7 +65,7 @@
                 <div class="link-btn">
                         <a class="btn-style-one" asp-area="" asp-controller="ErRegistration" asp-action="ErRegistration">ER Registration</a>
                 </div>
-            </div>
+            </div> *@
         </div>
     </section>
     </header>
