--- a/Views/ErRegistration/ErRegistration.cshtml
+++ b/Views/ErRegistration/ErRegistration.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HospitalQueue.Models.ErRegistration
 
 @{
-    Layout = null;
+   // Layout = null;
 }
 
 <!DOCTYPE html>
@@ -28,32 +28,6 @@
 
 </head>
 <body>
-    <header>
-        <!--Header Upper-->
-        <section class="header-uper">
-            <div class="container clearfix">
-                <div class="logo">
-                    <figure>
-                        <a asp-area="" asp-controller="Home" asp-action="Index"><img src="~/images/logo.png" alt="" width="130"></a>
-                    </figure>
-                </div>
-                <div class="right-side">
-                    <ul class="contact-info">
-                        <li class="item">
-                            <strong>Email</strong>
-                            <br>
-                                <span>info@medic.com</span>
-                        </li>
-                        <li class="item">
-                            <strong>Call Now</strong>
-                            <br>
-                            <span>+(27) - 112</span>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-    </header>
     <section class="appoinment-section section">
         <div class="container">    
                 <div class="col-md-6 col-sm-12 col-xs-12">
